@@ -1,3 +1,6 @@
+2001-11-09 Vince Darley <vincentdarley@sourceforge.net>
+	* tests/vfs*.test: better tests; more platform independent.
+
 2001-11-08  Vince Darley <vincentdarley@sourceforge.net>
 	* generic/vfs.c: made code thread-safe.  Disallow
 	safe interpreters from using vfs code since they can then
